--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,41 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.field-header {
+  font-size: 40px;
+  font-weight: 700;
+  padding: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.field {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.field-input {
+  display: flex;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+.error-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
-.read-the-docs {
-  color: #888;
+.error-field {
+  display: flex;
+  align-items: center;
+}
+
+.error-message {
+  font-size: 30px;
+  padding-left: 15px;
 }
